--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,11 @@ jobs:
             - "~/.ivy2/cache"
             - "~/.sbt"
             - "~/.m2"
+
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
+
